@@ -35,6 +35,7 @@ Date: 2024-12-08
     - Added a way to get certain chemicals from bacteria'ed and cyanobacteria'ed agars, by feeding them another chemical.
     - Added entity descriptions for all heat pipes, displaying their max temperature.
     - Began modelling plates, and giving different elements different shapes compared to the default square.
+    - Added a way to void calcium ore/dust/calcite.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
